[package]
name = "brain-sdk-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for Brain clients."

[dependencies]
brain-core = { path = "../brain-core" }
brain-protocol = { path = "../brain-protocol" }

futures-lite.workspace = true
parking_lot.workspace = true
# 16.8.1: SDK encodes / decodes typed attribute blobs (PersonAttributesWire) via
# the same rkyv 0.7 used by brain-protocol. Same `check_bytes` validation on
# decode as the wire layer.
rkyv = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "time",
  "sync",
  "macros",
  "io-util",
  "rt-multi-thread",
] }
tracing.workspace = true
uuid = { workspace = true, features = ["v7"] }
# 17.8: SmallVec used by StatementHandle::from_view → brain-core
# EvidenceRef projection (inline cap 8).
smallvec.workspace = true
# 19.8: serde_json used by the SchemaBuilder DSL printer when
# emitting `examples:` / `schema:` JSON values for extractor fields.
serde_json = { workspace = true }
# Pool keepalive (Step 1 of liveness work): set SO_KEEPALIVE +
# TCP_KEEPIDLE / TCP_KEEPINTVL / TCP_KEEPCNT on the SDK's connect
# path so the kernel detects half-broken peers within ~60 s,
# independent of the SDK's app-level CLIENT_PONG.
socket2 = { workspace = true }

[dev-dependencies]
anyhow.workspace = true
