[package]
name = "brain-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The Brain cognitive substrate server."

[[bin]]
name = "brain-server"
path = "src/main.rs"

[features]
default = []
# Sub-task 9.15 — feature-gated LLM summarizers. Both pull `reqwest`
# (with rustls-tls, reusing 9.9's vendored stack). Default off: the
# substrate works without consolidation.
summarizer-openai = ["reqwest"]
summarizer-ollama = ["reqwest"]

[dependencies]
# Brain crate dependencies are added in later Phase 9 sub-tasks as each one
# is wired in (e.g. 9.4 shards → brain-storage; 9.5 metadata → brain-metadata,
# ...). Keeping the import set minimal so this crate compiles on non-Linux
# hosts during the pure-rust sub-tasks.
brain-core = { path = "../brain-core" }

anyhow.workspace = true
arc-swap.workspace = true
base64.workspace = true
blake3.workspace = true
flume.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, optional = true }
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

# Glommio + the brain-* crates that pull Linux-only deps (io_uring, mmap,
# candle, redb) live behind the target gate. The shard module is cfg-gated
# so this crate still compiles on macOS / Windows for non-shard work
# (config, routing).
[target.'cfg(target_os = "linux")'.dependencies]
glommio.workspace = true
brain-protocol = { path = "../brain-protocol" }
brain-storage = { path = "../brain-storage" }
brain-metadata = { path = "../brain-metadata" }
brain-extractors = { path = "../brain-extractors" }
# 21.5: shard startup builds the LLM model router + per-shard cache.
brain-llm = { path = "../brain-llm" }
brain-index = { path = "../brain-index" }
brain-embed = { path = "../brain-embed" }
brain-planner = { path = "../brain-planner" }
brain-ops = { path = "../brain-ops" }
brain-rerank = { path = "../brain-rerank" }
brain-workers = { path = "../brain-workers" }
# `extract --backfill` walks `memories` + `texts` redb tables directly
# inside the shard executor (avoiding the cost of a full dispatch
# round-trip for what is a maintenance op).
redb = { workspace = true }
# Phase 11 M3: admin server is built on brain-http (hyper-based).
brain-http = { path = "../brain-http", features = ["server"] }
# Hyper types referenced directly from admin handlers + the metrics
# exposition path.
hyper = { workspace = true, features = ["http1", "server"] }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Connection layer (sub-task 9.9): Tokio TCP + optional rustls TLS.
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
socket2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
proptest.workspace = true

# Connection layer integration tests need to drive a TLS client over the
# wire protocol directly.
[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio-rustls.workspace = true
rustls.workspace = true
rcgen.workspace = true
# Storage-regression test opens metadata.redb directly to assert
# typed-graph tables stayed empty for memory-only writes.
redb.workspace = true
brain-storage = { path = "../brain-storage" }
tracing.workspace = true
