[package]
name = "brain-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory-mapped vector arena and write-ahead log for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
crc32c.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
libc.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
brain-core = { path = "../brain-core" }
proptest.workspace = true
tempfile.workspace = true
