[package]
name = "brain-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Memory-mapped vector arena and write-ahead log for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
crc32c.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
libc.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
# WAL writer now runs on Glommio's executor via io_uring (sub-task 9.6a).
# Both deps are Linux-only — matches the crate-level compile_error in lib.rs.
glommio.workspace = true
flume.workspace = true
futures-lite = "2"

[dev-dependencies]
brain-core = { path = "../brain-core" }
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "crc32c"
harness = false
