[package]
name = "brain-workers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Background workers for Brain (decay, consolidation, GC, etc.)."

[dependencies]
brain-core = { path = "../brain-core" }
brain-embed = { path = "../brain-embed" }
brain-index = { path = "../brain-index" }
brain-metadata = { path = "../brain-metadata" }
brain-ops = { path = "../brain-ops" }
brain-planner = { path = "../brain-planner" }
blake3.workspace = true
parking_lot.workspace = true
redb.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
# After sub-task 9.7: per-shard scheduler runs on Glommio.
glommio.workspace = true
futures-lite.workspace = true
# F-13: per-worker run-now wakeup channel (Glommio-compatible).
flume.workspace = true

[dev-dependencies]
brain-embed = { path = "../brain-embed" }
brain-index = { path = "../brain-index" }
brain-metadata = { path = "../brain-metadata" }
brain-planner = { path = "../brain-planner" }
brain-protocol = { path = "../brain-protocol" }
parking_lot.workspace = true
tempfile.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
